// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInput render it should render 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: rgb(255,255,255);
  box-shadow: 0 0 0 1px #888c8e;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-1:hover {
  box-shadow: 0 0 0 1px #003e82;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  box-shadow: 0 0 0 1px #032c5e;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  color: rgb(40,42,43);
  display: block;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  outline: none;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  resize: none;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover {
  color: rgb(200,204,207);
  cursor: not-allowed;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      cursor="text"
      data-paste-element="FORM_INPUT_WRAPPER"
      display="flex"
      width="100%"
    >
      <input
        class="emotion-0"
        color="colorText"
        data-paste-element="FORM_INPUT"
        display="block"
        font-family="inherit"
        font-size="fontSize30"
        font-weight="fontWeightNormal"
        id="input"
        type="text"
        value="test"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormInput render it should render with disabled 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  color: rgb(40,42,43);
  display: block;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  outline: none;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  resize: none;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover {
  color: rgb(200,204,207);
  cursor: not-allowed;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: rgb(248,248,249);
  box-shadow: 0 0 0 1px #e4e7e9;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: not-allowed;
}

.emotion-1:hover {
  box-shadow: 0 0 0 1px #e4e7e9;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  box-shadow: 0 0 0 1px #e4e7e9;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      cursor="not-allowed"
      data-paste-element="FORM_INPUT_WRAPPER"
      display="flex"
      width="100%"
    >
      <input
        class="emotion-0"
        color="colorText"
        data-paste-element="FORM_INPUT"
        disabled=""
        display="block"
        font-family="inherit"
        font-size="fontSize30"
        font-weight="fontWeightNormal"
        id="input"
        type="text"
        value="test"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormInput render it should render with hasError 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  color: rgb(40,42,43);
  display: block;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  outline: none;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  resize: none;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover {
  color: rgb(200,204,207);
  cursor: not-allowed;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: rgb(255,255,255);
  box-shadow: 0 0 0 1px #e22525;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-1:hover {
  box-shadow: 0 0 0 1px #921200;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  box-shadow: 0 0 0 1px #032c5e;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      cursor="text"
      data-paste-element="FORM_INPUT_WRAPPER"
      display="flex"
      width="100%"
    >
      <input
        aria-invalid="true"
        class="emotion-0"
        color="colorText"
        data-paste-element="FORM_INPUT"
        display="block"
        font-family="inherit"
        font-size="fontSize30"
        font-weight="fontWeightNormal"
        id="input"
        type="text"
        value="test"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormInput render it should render with prefix 1`] = `
<DocumentFragment>
  .emotion-3 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: rgb(255,255,255);
  box-shadow: 0 0 0 1px #888c8e;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-2:hover {
  box-shadow: 0 0 0 1px #003e82;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-2:active,
.emotion-2[data-active=true] {
  box-shadow: 0 0 0 1px #032c5e;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  color: rgb(40,42,43);
  display: block;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  outline: none;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  resize: none;
  width: 100%;
}

.emotion-1::-webkit-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-1::-moz-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-1:-ms-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-1::placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-1:disabled,
.emotion-1:disabled:focus,
.emotion-1:disabled:hover,
.emotion-1[aria-disabled=true],
.emotion-1[aria-disabled=true]:focus,
.emotion-1[aria-disabled=true]:hover {
  color: rgb(200,204,207);
  cursor: not-allowed;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: rgb(248,248,249);
  border-bottom-left-radius: 4px;
  border-right-color: rgb(228,231,233);
  border-right-style: solid;
  border-right-width: 1px;
  border-top-left-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25rem;
  padding: 0.5rem;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
      cursor="text"
      data-paste-element="FORM_INPUT_WRAPPER"
      display="flex"
      width="100%"
    >
      <div
        class="emotion-0"
        data-paste-element="BOX"
        display="flex"
      >
        <div>
          prefix
        </div>
      </div>
      <input
        class="emotion-1"
        color="colorText"
        data-paste-element="FORM_INPUT"
        display="block"
        font-family="inherit"
        font-size="fontSize30"
        font-weight="fontWeightNormal"
        id="input"
        type="text"
        value="test"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormInput render it should render with readOnly 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  color: rgb(40,42,43);
  display: block;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  outline: none;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  resize: none;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover {
  color: rgb(200,204,207);
  cursor: not-allowed;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: rgb(248,248,249);
  box-shadow: 0 0 0 1px #888c8e;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-1:hover {
  box-shadow: 0 0 0 1px #888c8e;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  box-shadow: 0 0 0 1px #032c5e;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      cursor="text"
      data-paste-element="FORM_INPUT_WRAPPER"
      display="flex"
      width="100%"
    >
      <input
        aria-readonly="true"
        class="emotion-0"
        color="colorText"
        data-paste-element="FORM_INPUT"
        display="block"
        font-family="inherit"
        font-size="fontSize30"
        font-weight="fontWeightNormal"
        id="input"
        readonly=""
        type="text"
        value="test"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormInput render it should render with suffix 1`] = `
<DocumentFragment>
  .emotion-3 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: rgb(255,255,255);
  box-shadow: 0 0 0 1px #888c8e;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-2:hover {
  box-shadow: 0 0 0 1px #003e82;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-2:active,
.emotion-2[data-active=true] {
  box-shadow: 0 0 0 1px #032c5e;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  color: rgb(40,42,43);
  display: block;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  outline: none;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  resize: none;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover {
  color: rgb(200,204,207);
  cursor: not-allowed;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: rgb(248,248,249);
  border-bottom-right-radius: 4px;
  border-left-color: rgb(228,231,233);
  border-left-style: solid;
  border-left-width: 1px;
  border-top-right-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25rem;
  padding: 0.5rem;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
      cursor="text"
      data-paste-element="FORM_INPUT_WRAPPER"
      display="flex"
      width="100%"
    >
      <input
        class="emotion-0"
        color="colorText"
        data-paste-element="FORM_INPUT"
        display="block"
        font-family="inherit"
        font-size="fontSize30"
        font-weight="fontWeightNormal"
        id="input"
        type="text"
        value="test"
        width="100%"
      />
      <div
        class="emotion-1"
        data-paste-element="BOX"
        display="flex"
      >
        <div>
          suffix
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
